# saucebox

./: .gitignore  CMakeLists.txt  DAW_SMOKE_TEST_PLAN.md  EXECUTION_CHECKLIST.md  PRESET_BANK_V1.md  PRODUCT_LINEUP.md  PRODUCT_REQUIREMENTS.md  README.md  SCOPE_LOCK_V1.md  SECRET_SAUCE_CANVA_ASSET_GUIDE.md  SECRET_SAUCE_LISTENING_CHECKLIST.md  SECRET_SAUCE_PRODUCT_STRATEGY.md  SMOKE_TEST_RESULTS.md  TRACK_REVIEW_LANDING_SPEC.md  sauce-box-architecture.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Products/: ActiveProduct.h  ProductCatalog.h
Source/Products/DripSauce/: DripSauceManifest.h  DripSaucePresets.h  DripSauceTheme.h
Source/Products/ExtraSauce/: ExtraSauceManifest.h  ExtraSaucePresets.h  ExtraSauceTheme.h
Source/Products/GlueSauce/: GlueSauceManifest.h  GlueSaucePresets.h  GlueSauceTheme.h
Source/Products/HotPacket/: HotPacketManifest.h  HotPacketPresets.h  HotPacketTheme.h
Source/Products/LightSauce/: LightSauceManifest.h  LightSaucePresets.h  LightSauceTheme.h
Source/Products/SauceBox/: SauceBoxManifest.h  SauceBoxPresets.h  SauceBoxTheme.h
Source/Products/SecretSauce/: SecretSauceManifest.h  SecretSaucePresets.h  SecretSauceTheme.h
Source/Products/SweetSauce/: SweetSauceManifest.h  SweetSaucePresets.h  SweetSauceTheme.h
Source/Products/ThickSauce/: ThickSauceManifest.h  ThickSaucePresets.h  ThickSauceTheme.h
